Interpreter/Examples/bad/example10.jam
/* Using vars code syntax without vars */
main {
code:
    print(2+2);
}
